# triton

./: .gitignore  CMakeLists.txt  MLA-decode.csv  README.md  build.sh  fused-attention-fwd-d128-layoutbhsd.csv  fused-attention-fwd-layoutbhsd.csv  moe-gemm-benchmark.csv  persistent-flash-attention-benchmark-results.txt  results.html  triton_rocm_20-52.Dockerfile
.github/workflows/: amd-offline-tests.yml  amd_perf_kernel_Integration_tests.yml  amd_perf_kernel_benchmark.yml  integration-tests.yml  integration-tests.yml.in  torchinductor_ut.sh
cmake/: llvm-hash.txt
golden_ir/: att.sh  att.txt  att_exec.sh  gemm_sub.py  matmul_kernel.amdgcn  notes.txt  renum.sh  renumber_llir.py  run.sh
golden_ir/matmul/: 2b_global_loads.llir  2d_global_loads.llir  3_regions.llir  4b_loop_end.llir  6_local_prefetch.llir  6c_local_prefetch.llir  6d_local_prefetch.llir  7a.llir  7d.llir  7g.llir  8c.llir  8f.llir  8j.llir  notes.txt
golden_ir/versions/: 2_global_loads.llir  2a_global_loads.llir  2b_global_loads.llir  2c_global_loads.llir  5a_loop_begin.llir  5b_loop_begin.llir  5c_loop_begin.llir
golden_llir/: config.yaml  gemm_sub.py  matmul_kernel.amdgcn  renumber_llir.py
golden_llir/matmul/: 4_loop_end.llir  4d_loop_end.llir  5d_loop_begin.llir  6_local_prefetch.llir  6b_local_prefetch.llir  6d_local_prefetch.llir  7b.llir  7c.llir  7d.llir  7e.llir  7f.llir  8b.llir  8d.llir  8e.llir  8g.llir  8h.llir  8i.llir  8k.llir  8l.llir  8m.llir  notes.txt
golden_ttgir/: att.sh  att.txt  att_exec.sh  config.yaml  gemm_sub.py  run.sh
golden_ttgir/ir/: 0.ttgir  1.ttgir  2.ttgir  3.ttgir  4.ttgir  5.ttgir  6.ttgir  7.ttgir
golden_ttgir/irp/: 1.ttgir  10.ttgir  11.ttgir  14.ttgir  16.ttgir  17.ttgir  2.ttgir  3.ttgir  4.ttgir  5.ttgir  6.ttgir  7.ttgir  8.ttgir  9.ttgir  notes.txt
golden_ttgir/tlp_sb_tests/: 0spill.ttgir  fast.ttgir  fast_0spills.ttgir  fast_7spills_esb0.ttgir  sb0_esb0.ttgir  sb0_esb0_4spills_agprmovs.ttgir  sb0_esb0_sgbN.ttgir  sb0_esbN.ttgir  sb1030_esb1030.ttgir  sbN_esb0.ttgir  sbN_esbN.ttgir
lib/Analysis/: Allocation.cpp  Utility.cpp
lib/driver/: module.cc
named_barrier/: README.md  barrier.cpp
python/: pyproject.toml  setup.py
python/perf-kernels/tools/profiler/ck-benchmarks/gemm/: CMakeLists.txt  README.md  common.hpp  kernel.cpp  main.cpp  testcase.hpp
(+244 files in other folders)
